--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
   <nav>
     <ul>
-      <li><a href="home.html" target="contentFrame">Home</a></li>
+      <!-- <li><a href="home.html" target="contentFrame">Home</a></li> -->
       <li><a href="profile.html" target="contentFrame">Profile</a></li>
       <li><a href="random.html" target="contentFrame">Random</a></li>
       <li><a href="jadwal.html" target="contentFrame">Jadwal</a></li>
+      <!-- <li><a href="jadwalV2.html" target="contentFrame">Jadwal V2</a></li> -->
     </ul>
   </nav>
 
   <main>
-    <iframe src="random.html" name="contentFrame" frameborder="0"></iframe>
-    <!-- <iframe src="home.html" name="contentFrame" frameborder="0"></iframe> -->
+    <!-- <iframe src="random.html" name="contentFrame" frameborder="0"></iframe> -->
+    <iframe src="profile.html" name="contentFrame" frameborder="0"></iframe>
   </main>
 </body>
 </html>
