--- a/profile.html
+++ b/profile.html
@@ -3,10 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
   <title>Profile</title>
 </head>
 <body>
-  <h2>User Profile</h2>
-  <p>This is the profile page content.</p>
+  <!-- <h2>User Pro1file</h2>
+  <p>This is the profile page content.</p> -->
+  <div style="width: 50%; margin: auto;">
+    <div style="text-align: center; width: 50%; margin: auto;">
+      <div style="width: 100%; max-width: 20rem;">
+        <img style="width: 100%;" src="assets/images/foto-profiku-4.jpg" alt="Foto Profil">
+      </div>
+    </div>
+    <div style="font-family: 'Nunito', sans-serif; font-size: 22px; text-align: justify;">
+      <p>
+        Pada tahun 2020 saya mulai mempelajari cara membangun sebuah website, dengan mempelajari html, css, javascript, dan php. Saat ini saya menjadi frontend developer di sebuah sofware house yang terletak di kota semarang.
+      </p>
+      <p>
+        Saya ingin menjadi web developer karena saya menilai sebuah website lebih luas penggunaannya atau multiplatform, yang mana bisa digunakan oleh windows, mac, linuc, android, ios, dan lain lain tanpa kendala yang signifikan. Karenanya saya bisa membagikan informasi dan membuat alat atau tools untuk memudahkan banyak orang dalam kehidupannya
+      </p>
+      <p>
+        Saat ini saya sedang berkuliah di universitas semarang, atau USM, dan untuk kepentingan tugas kuliah, nama saya adalah oky faishal rifqi, dan nim saya G.231.23.0008
+      </p>
+    </div>
+
+    <!-- <section>
+      <img src="assets/images/logo-2.png" alt="Foto Profil">
+      <h1>Nama Saya</h1>
+      <p>Deskripsi singkat tentang diri saya.</p>
+
+      <h2>Kontak</h2>
+      <ul>
+          <li>Email: contoh@email.com</li>
+          <li>Telepon: 123-456-7890</li>
+          <li>Alamat: Jalan Contoh No. 123</li>
+      </ul>
+
+      <h2>Pendidikan</h2>
+      <ul>
+          <li>SD Negeri Contoh, Tahun A</li>
+          <li>SMP Negeri Contoh, Tahun B</li>
+          <li>SMA Negeri Contoh, Tahun C</li>
+          <li>Universitas Contoh, Jurusan ABC</li>
+      </ul>
+  </section> -->
+  </div>
 </body>
 </html>
