--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="profile.html" target="contentFrame">Profile</a></li>
       <li><a href="random.html" target="contentFrame">Random</a></li>
       <li><a href="jadwal.html" target="contentFrame">Jadwal</a></li>
+      <li><a href="map_usm.html" target="contentFrame">Map USM</a></li>
       <!-- <li><a href="jadwalV2.html" target="contentFrame">Jadwal V2</a></li> -->
     </ul>
   </nav>
