--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </nav>
 
   <main>
-    <iframe src="youtube.html" name="contentFrame" frameborder="0" ></iframe>
-    <!-- <iframe src="profile.html" name="contentFrame" frameborder="0"></iframe> -->
+    <!-- <iframe src="youtube.html" name="contentFrame" frameborder="0" ></iframe> -->
+    <iframe src="profile.html" name="contentFrame" frameborder="0"></iframe>
   </main>
 </body>
 </html>
